# prepams

./: .dockerignore  .editorconfig  .gitignore  .popper.yml  ARTIFACT-EVALUATION.md  Dockerfile  Dockerfile.backend  Dockerfile.evaluation  Dockerfile.frontend  Dockerfile.shared  Dockerfile.survey  Dockerfile.verse  LICENSE.md  README.md  backend_env.example  docker-compose.yml  ecosystem.config.js  env.example  index.html  popper  survey_env.example
backend/: .env.default  index.js  package-lock.json  package.json
backend/migrations/: 001-schema.sql  002-demo-data.sql
eval/: index.html
evaluation/: .dockerignore  .gitignore  Dockerfile  analysis.R  common.R  evaluation.js  index.js  microbenchmarks.R  package-lock.json  package.json  serve.js
evaluation/analyses/: performance.R  scaling.R
evaluation/client/: index.js  worker.js
evaluation/experiments/: disqualifier.js  index.js  performance.js  qualifier.js  scaling.js
evaluation/lib/: package.json  prepams_shared.d.ts  prepams_shared.js  prepams_shared.mjs  prepams_shared.wasm  prepams_shared_bg.js  prepams_shared_bg.wasm  (+1 more)
frontend/: default-nginx.conf  package-lock.json  package.json  vue.config.js
results/: performance.tex  scaling.tex
shared/: .gitignore  Cargo.toml  build.sh  complexity.R  complexity.csv  complexity.js  package-lock.json  package.json
shared/benches/: prepams.rs
shared/src/: lib.rs
shared/src/bindings/: issuer.rs  mod.rs  organizer.rs  participant.rs
shared/src/credential/: mod.rs
shared/src/payout/: mod.rs
shared/src/pbss/: mod.rs
shared/src/prerequisites/: mod.rs
shared/src/proofs/: generic.rs  mod.rs  participation.rs  payout.rs
shared/src/serialization/: G1Affine.rs  G1AffineOption.rs  G2Affine.rs  G2AffineOption.rs  Gt.rs  Scalar.rs  mod.rs
shared/src/types/: credential.rs  mod.rs  prerequisites.rs
shared/src/zksnark/: mod.rs
survey/: index.js  package-lock.json  package.json
(+132 files in other folders)
