[package]
name = "prepams-shared"
description = "Shared cryptography library for PrePaMS"
authors = ["Echo Meißner <mail@ech0.de>", "Felix Engelmann <fe-research@nlogn.org>"]
repository = "https://github.com/vs-uulm/prepams"
license = "AGPL-3.0-or-later"
version = "1.2.0"
edition = "2021"

[profile.release]
opt-level = 3

[lib]
crate-type = ["cdylib","lib"]
bench = false

[dependencies]
ff = "0.12"
sha2 = "0.9"
rand = "0.8.5"
base64 = "0.13"
byteorder = "1"
group = "0.12.0"
merlin = "3.0.0"
rand_chacha = "0.3.1"
ed25519-zebra = "4.0.3"
serde = { version = "1.0", features = ["derive"] }
postcard = { version = "1.0.0", features = ["use-std"] }
bls12_381 = { version = "0.7.0", features = ["experimental"] }
wasm-bindgen = { version = "0.2.90", features = ["serde-serialize"] }
getrandom = { version = "0.2.6", features = ["js", "wasm-bindgen"] }
serde_with = "3.0.0"
simple-error = "0.3.0"
serde_path_to_error = "0.1.13"
serde-wasm-bindgen = "0.5.0"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
criterion = { version = "0.4", default-features = false }

[[bench]]
name = "prepams"
harness = false
